--- a/platformio.ini
+++ b/platformio.ini
@@ -9,16 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:nodemcu]
-platform = espressif8266
-board = nodemcu
+[env:esp-wrover-kit]
+platform = espressif32
+board = esp-wrover-kit
 framework = arduino
+upload_protocol = esptool
 
 ; change microcontroller
-board_build.mcu = esp8266
+board_build.mcu = esp32
 
 ; change MCU frequency
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 240000000L
 
 lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.3
