working www interface and OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,13 +7,34 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = esp_local
+
+[env]
+; ============================================================
+; Serial configuration
+; choose upload speed, serial-monitor speed
+; ============================================================
+upload_speed = 921600
+;upload_port = COM11
+monitor_speed = 115200
+;monitor_port = COM11
+
+; Checks for the compatibility with frameworks and dev/platforms
+lib_compat_mode = strict
 
 
-[env:esp-wrover-kit]
+[env:esp_local]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 upload_protocol = esptool
+
+build_flags =
+  -DOTA_PASS=\"testpass123\"
+  -DDEF_AP_SSID_PASSWORD=\"testpass123\"
+  -DDEF_SSID=\"testssid\"
+  -DDEF_SSID_PASSWORD=\"testssidpass\"
 
 ; change microcontroller
 board_build.mcu = esp32
@@ -23,3 +44,40 @@ board_build.f_cpu = 240000000L
 
 lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.3
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	me-no-dev/ESPAsyncTCP@>=1.2.2
+	me-no-dev/AsyncTCP@>=1.1.1
+	lorol/LittleFS_esp32@>=1.0.6
+ 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
+
+[env:ota]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+
+upload_protocol = espota
+upload_port=10.10.10.250
+upload_flags=
+   --auth=testpass123
+   --port=3232
+   --host_ip=10.10.10.110
+
+build_flags =
+  -DOTA_PASS=\"testpass123\"
+  -DDEF_AP_SSID_PASSWORD=\"testpass123\"
+  -DDEF_SSID=\"testssid\"
+  -DDEF_SSID_PASSWORD=\"testssidpass\"
+
+; change microcontroller
+board_build.mcu = esp32
+
+; change MCU frequency
+board_build.f_cpu = 240000000L
+
+lib_deps =
+	adafruit/Adafruit NeoPixel@^1.10.3
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	me-no-dev/ESPAsyncTCP@>=1.2.2
+	me-no-dev/AsyncTCP@>=1.1.1
+	lorol/LittleFS_esp32@>=1.0.6
+ 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
